Fix zoom issue on mobile

--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -144,7 +144,7 @@
 
   .search-input {
     width: 100%;
-    font-size: 0.9rem;
+    font-size: 16px; /* Prevent iOS zoom on focus */
   }
 
   .search-button {
@@ -178,10 +178,5 @@
 
   .error-message {
     font-size: 0.9rem;
-  }
-
-  .loading-more {
-    padding: 1rem 0;
-    min-height: 60px;
   }
 }
